--- a/todo_bck/package.json
+++ b/todo_bck/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "pg": "^8.7.3",
     "sequelize": "^6.21.3",
