--- a/todo_bck/package.json
+++ b/todo_bck/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node --experimental-modules --trace-warnings src/server.js",
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon --trace-deprecation src/server.js"
   },
   "keywords": [],
   "author": "",
